[package]
name = "testServerWithAXUM"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"

sea-orm = { version = "1.1.19", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }